# poke

./: .gitignore  AUTHORS  ChangeLog  DEPENDENCIES  HACKING  Makefile.am  NEWS  NO-WARRANTY  README  README-hacking  THANKS  amend-autom4te-output  bootstrap.conf  configure.ac
autoconf/: jitter.m4
build-aux/: trivial-source.c
doc/: gendocs_template  jitter.texi  missing-man-page.1  poke.texi
emacs/: jitter-mode.el
etc/: Makefile.am  hacking.org  poke.rec
example-build-systems/: AUTHORS  ChangeLog  NEWS  README  bootstrap
example-build-systems/structured-simple/: Makefile.am  configure.ac
example-build-systems/structured-with-library/: Makefile.am  configure.ac
example-vms/brainfuck/: brainfuck.jitter
example-vms/jitterlisp/: THANKS  jitterlisp-allocator.c  jitterlisp-allocator.h  jitterlisp-ast.c  jitterlisp-ast.h  jitterlisp-banner.c  jitterlisp-banner.h  jitterlisp-code-generator.c  jitterlisp-code-generator.h  jitterlisp-config.h  jitterlisp-constant-strings.h  jitterlisp-constants.c  jitterlisp-constants.h  jitterlisp-error.c  jitterlisp-error.h  jitterlisp-eval-interpreter.c  jitterlisp-eval-interpreter.h  jitterlisp-eval-vm.c  jitterlisp-eval-vm.h  jitterlisp-eval.c  jitterlisp-eval.h  jitterlisp-library.lisp  jitterlisp-macros.c  jitterlisp-macros.h  jitterlisp-main.c  jitterlisp-operations.c  jitterlisp-operations.h  jitterlisp-primitives.c  jitterlisp-primitives.h  jitterlisp-printer.c  jitterlisp-printer.h  jitterlisp-reader.c  jitterlisp-reader.h  jitterlisp-run-input.c  jitterlisp-run-input.h  jitterlisp-settings.c  jitterlisp-settings.h  jitterlisp-sexpression.c  jitterlisp-sexpression.h  jitterlisp-style.css  (+5 more)
example-vms/jitterlisp/compat/: common-lisp-compatibility.lisp  scm-compatibility.scm
example-vms/jitterlisp/compatibility/: common-lisp-compatibility.lisp  gambit-compatibility.scm  (+7 more)
example-vms/structured/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  bootstrap  configure.ac  structured-code-generator-register.c  structured-code-generator-register.h  structured-code-generator-stack.c  structured-code-generator-stack.h  structured-code-generator.c  structured-code-generator.h  structured-main.c  structured-style.css  structured-syntax.c  structured-syntax.h  structured.jitter  structured.l  structured.y
example-vms/structured/examples/: count-down-nonopt.structuredvm  count-down-opt.structuredvm  count-down-optimized.structuredvm  count-down.structured  count-primes.c  count-primes.structured  count-up-down.structured  euclid-optimized.structuredvm  euclid-unoptimized.structuredvm  euclid.structured  primes.c  primes.java  primes.py  primes.structured
example-vms/uninspired/: uninspired-style.css  uninspired.jitter
gui/: poke-gui.c
jitter/: jitter-aligned-block.c  jitter-aligned-block.h  jitter-arithmetic.c  jitter-arithmetic.h  jitter-bitwise.h  jitter-c-compiler-version.h  jitter-config.h.in  jitter-cpp.h  jitter-data-locations.c  jitter-data-locations.h  jitter-defect.c  jitter-defect.h  jitter-disassemble.c  jitter-disassemble.h  jitter-dispatch.h  jitter-dynamic-buffer.c  jitter-dynamic-buffer.h  jitter-executor.h  jitter-fast-branch.c  jitter-fast-branch.h  jitter-fatal.c  jitter-fatal.h  jitter-hash-random-table.c  jitter-hash.c  jitter-hash.h  jitter-heap-debug.c  jitter-heap-debug.h  jitter-heap.c  jitter-heap.h  jitter-human-prefix.c  jitter-human-prefix.h  jitter-instruction.c  jitter-instruction.h  jitter-interpreter-private.h  jitter-list.c  jitter-list.h  jitter-machine-common.S  jitter-machine-common.h  jitter-malloc.c  jitter-malloc.h  (+55 more)
jitterc/: jitterc-generate.c  jitterc-generate.h  jitterc-main.c  jitterc-mangle.c  jitterc-mangle.h  jitterc-rewrite.c  jitterc-rewrite.h  jitterc-utility.c  jitterc-utility.h  jitterc-vm.c  jitterc-vm.h  jitterc.l  jitterc.y
libpoke/: Makefile.am  ios-dev-file.c  ios-dev-mem.c  ios-dev-nbd.c  ios.c  ios.h  libpoke.c  libpoke.h  pk-val.c  pkl-anal.c  pkl-asm.c  pkl-ast.c  pkl-ast.h  pkl-env.c  pkl-env.h  pkl-gen-attrs.pks  pkl-gen.c  pkl-gen.pks  pkl-insn.def  pkl-lex.l  pkl-rt-1.pk  pkl-rt-2.pk  pkl-rt.pk  pkl-tab.y  pkl-trans.c  pkl-typify.c  pvm-alloc.c  pvm-alloc.h  pvm-val.c  pvm-val.h  pvm.c  pvm.h  pvm.jitter  ras  std.pk
m4-utility/: jitter-script.m4sh
pickles/: Makefile.am  btf.pk  ctf-frame-dump.pk  ctf-frame.pk  dwarf-eh-frame-hdr.pk  eh-frame.pk  elf.pk
poke/: Makefile.am  pk-cmd-ios.c  pk-cmd-misc.c  pk-cmd-set.c  pk-dump.pk  pk-mi-json.c  pk-mi-msg.c  pk-repl.c
poked/: .gitignore  Makefile  linenoise.c  linenoise.h  poke-disasm.c  poke-fuse.c  poke-fuse_helpers.h  poke-in.c  poke-out.py  poke-repl.c  poked.c  poked.pk  read-file.c  read-file.h  usock.c  usock.h  usock_buf-priv.h  usock_buf-test.c  usock_buf.c  usock_buf.h
scripts/: emulator.in  generate-fast-branches.in.m4sh  highlight-disassembly.in  jitter-config.in.m4sh
src/: bad-demo.c
templates/: vm-main.c  vm.h  vm1.c
tests/: filter-test-case-output.c  utility.in
tests/elementary/: empty.vm  init-fini.test.in
tests/jitterlisp/: jitterlisp.test.in  test-definitions.scm
tests/structured/: begin-end.structured  conditional.structured  euclid.structured  primes.structured  programs.test.in  skip.structured
tests/uninspired/: add.vm  branch-thru-register.vm  branch-thru-slow-register.vm  call-leaf.vm  call-non-leaf.vm  call-thru-register-leaf.vm  call-thru-register-non-leaf.vm  conditional-branch-not-taken.vm  conditional-branch.vm  count-down-slow-register.vm  count-down.vm  count-up-down-slow-registers.vm  count-up-down.vm  div.vm  fundamental.test.in  load-0.vm  load-0xffff.vm  load-10-bit.vm  load-11-bit.vm  load-12-bit.vm  load-13-bit.vm  load-143010319.vm  load-1450166639.vm  load-16-bit.vm  load-1625250854.vm  load-17-bit.vm  load-21-bit.vm  load-22-bit.vm  load-23-bit.vm  load-24-bit.vm  load-25-bit.vm  load-256167675.vm  load-3-bit.vm  load-32-bit.vm  load-3761490317.vm  load-4-bit.vm  load-5-bit.vm  load-594116.vm  load-6-bit.vm  load-64-bit.vm  (+12 more)
tests/unit/: heap-test.c
testsuite/: Makefile.am
testsuite/poke.mi-json/: Makefile.am
testsuite/poke.pktest/: pktest-12.pk
(+57 files in other folders)
